Passed 1st set of tests.

--- a/note/note.1
+++ b/note/note.1
@@ -7,3 +7,6 @@ http://convert-html-to-pdf?
 	input=URL...
 	output=
 	auth_key=
+
+//	GenPdf("https://en.wikipedia.org/wiki/Secure_Remote_Password_protocol", ",a.pdf")
+//	GenPdf("https://www.google.com", ",b.pdf")
